--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     def espresso_core_version = "3.4.0"
 
     implementation "androidx.core:core-ktx:$core_version"
-    implementation "androidx.appcompat:$appcompat:appcompat"
+    implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayout_version"
     testImplementation "junit:junit:$junit_version"
